# FAQ_bot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py
data/: __init__.py  faq.json  loader.py
handlers/: common_handlers.py  menu_handlers.py
keyboards/: reply_keyboard.py
media/: example.txt
state/: menu.py
